--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="page-tools-link" href="#">Test</a>
                         <a class="page-tools-link" href="#">Test</a>
                         <a class="page-tools-link" href="#">Test</a>
-                        <a class="page-tools-link" href="#">Test</a>
+                        <a class="page-tools-link" href="#">Get a quote</a>
                     </div>
                 </nav>
             </div>
@@ -41,7 +41,7 @@
                 <p>Test</p>
             </div>
         </section>
-        <section class="welcome">
+        <section class="welcome-2">
             <div class="section-wrapper">
                 <p>Test</p>
             </div>
@@ -54,9 +54,10 @@
     </main>
     <div id="footer" class="wrapper">
         <div class="inner">
-            <p>&copy; Crimin.us 2024</p>
+            <p><iconify-icon inline icon="mdi:copyright"></iconify-icon> Crimin.us 2024</p>
         </div>
     </div>
     <script src="assets/js/navbar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@2.1.0/dist/iconify-icon.min.js"></script>
 </body>
 </html>
